--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
   "devDependencies": {
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
-    "typescript": "^4.6.4"
+    "html-webpack-plugin": "^5.5.0",
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   }
 }
