--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
+    "babel-loader": "^8.2.5",
     "html-webpack-plugin": "^5.5.0",
     "typescript": "^4.6.4",
     "webpack": "^5.72.0",
