--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "testcafe": "^1.18.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.8",
