--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@babel/preset-typescript": "^7.16.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "testcafe": "^1.18.6"
+    "testcafe": "^1.18.6",
+    "ts-node": "^10.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.8",
