--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
       "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
       "resolveJsonModule": true
     },
-    "include": ["src/**/*"]
+    "include": ["src/**/*", "tests/**/*"]
 }
   
