--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.30.0",
     "react-router-dom": "^6.3.0",
     "testcafe": "^1.18.6",
     "ts-node": "^10.7.0"
