--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,3 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }],
-    "redirects": [
-        {
-            "source": "/form",
-            "destination": "/form"
-        },
-        {
-            "source": "/buttons",
-            "destination": "/buttons"
-        }
-    ]
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
